
WhiteCore-Sim (Dev) 
Rowan D <greythane@gmail.com>
Fly-Man- <fly.man.opensim@gmail.com>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Mar 5th 2014: #0006
* Implemented a 'Missing Texture' texture tile for substitution when a requested tecture is not found.
* Re-implemented addon module DefaultInventoryToIARConverter to assist in creation of an updated
    DefaultInventory.iar that includes the additional texture

Feb 26th 2014
* More renaming of missed subdirs & files
* Rename ADNE command to WDNE

Feb 18th 2014
* TerrainChannel
    - updated default height setting for Island creation. (was tending to create submerged islands)
* setupversioninfo.bat (bin) - revamped to use std git commit hashcode

Feb 11th 2014
* DatabaseManager
    - Removed 'whitecore' from migration version table name.  >> 'migrator_version'

Feb 10th 2014
* Treepopulator - addon module
	- set default state to 'disabled' if config not found (Nature.ini)
* Scenemanager ( Load & save oar)
* AppearanceArchiver (load & save avatar archive)
* InventoryArchiver (load , save & save withoutassets iar file)
	- added some sanity checkes for missing, invalid and existing filenames.
* Rename WhiteCore/Modules/Region/AuroraArchiver.cs > .../WhiteCoreArchiver.cs
	(old format .abackup processing)
	 
Feb 9th 2014
* LSL Functions
	- Cleaned up the old Deprecated, ShoutError and NotImplemented
	- Updated the LSL_Api.cs file with all the remaining functions and set those as NotImplemented for this moment
---------------------------------
Feb 3rd 2014
* Treepopulator 
    - correct HandleTreeConfigure() for invalid commandline option being passed
    - update Configure & Update to correctly handle the 'quit' abort entry
    - Provide an option to start tree growth when reload(ing) copse definitions after restart

* Added console info output if entered command has not been recognised
* Changed a bunch of destructive command prompts to default to 'no' instead of 'yes'