@@ -1,6 +1,6 @@
 # WhiteCore
 
-The WhieCore Development Team has begun the continuation of Aurora virtual world server.
+The WhiteCore Development Team has begun the continuation of Aurora virtual world server.
 
 The WhiteCore server is an OpenSim/Aurora-Sim derived project with heavy emphasis on supporting all users, 
 increased technology focus, heavy emphasis on working with other developers,
@@ -17,3 +17,10 @@ and a set of features around stability and simplified usability for users.
 
 ## Router issues
 If you are having issues logging into your simulator, take a look at http://forums.osgrid.org/viewtopic.php?f=14&t=2082 in the Router Configuration section for more information on ways to resolve this issue.
+
+## Support
+Support is available from various sources.
+
+IRC channel #whitecore-support on freenode
+Check out http://whitecore-sim.org for the latest developments, downloads and forum
+Sarge's Google + community is for both Aurora and WhiteCore with a friendly bunch that is happy to answer questions. Find it at https://plus.google.com/communities/113034607546142208907?cfem=1
