@@ -1,9 +1,0 @@
-In this directory you can place addon modules for OpenSim
-
-Each module should be in it's own tree and the root of the tree
-should contain a file named "prebuild.xml", which will be included in the
-main prebuild file.
-
-The prebuild.xml should only contain <Project> and associated child tags.  
-The <?xml>, <Prebuild>, <Solution> and <Configuration> tags should not be 
-included since the add-on modules prebuild.xml will be inserted directly into the main prebuild.xml
