@@ -4,6 +4,14 @@ Rowan D <greythane@gmail.com>
 Fly-Man- <fly.man.opensim@gmail.com>
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+Mar 6th 2014
+* Update GridService.HandleShowRegion() to provide a cleaner format for display of info
+* SceneManager.HandleChangeRegion()
+  - revised to be case insensitive when specifying the selection region name.
+* SceneManager.HandleShowRegions()
+  - updated and formatted displayed scene(region) info
+  - added estate name and owner details
+
 Mar 5th 2014: #0006
 * Implemented a 'Missing Texture' texture tile for substitution when a requested tecture is not found.
 * Re-implemented addon module DefaultInventoryToIARConverter to assist in creation of an updated
